--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html ng-app="swishListApp">
   <meta charset="utf-8">
   <title>SWISHList</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <base href="/"  />
   <link charset="utf-8" rel="stylesheet" href="/css/style.css">
   <script  charset="utf-8" src="/js/app.js" type="text/javascript"></script>
@@ -17,7 +18,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" ui-sref-active ui-sref="home"><strong>Swish</strong>List</a>
+          <a class="navbar-brand" ui-sref-active ui-sref="clothesItemsIndex"><img src="/images/Logo.png" alt="swish-list-logo" /></a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
