added more styling to index page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <li ng-click="main.toggleBurger()">
               <a class="nav-bar-links"  href="#" ui-sref="usersOutgoingShow" ui-sref-active >Outgoing Swishes</a>
             </li>
-            <li>
+            <li ng-click="main.toggleBurger()">
               <a class="nav-bar-links"  href="#" ui-sref="usersArchiveShow" ui-sref-active >Archive</a>
             </li>
             <li>
