quick update to footer

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </main>
 
   <footer>
-    <h3>&copy; Abi, Caz & Johnnie</h1>
+    <h3>&copy; Abi, Caz, Dan & Johnnie</h1>
   </footer>
 
 </body>
