--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html ng-app="swishListApp">
   <meta charset="utf-8">
   <title>SWISHList</title>
+  <link rel="icon" href="http://pngimg.com/upload/tshirt_PNG5452.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <base href="/"  />
   <link charset="utf-8" rel="stylesheet" href="/css/style.css">
