--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" ng-hide="main.user"><img src="/images/Logo.png" alt="swish-list-logo" /></a>
-          <a id="mobile-logo" ng-show="main.user" class="navbar-brand"><img src="/images/Logo.png" alt="swish-list-logo" /></a>
+          <a id="mobile-logo" class="navbar-brand"               ng-show="main.user" ui-sref-active ui-sref="clothesItemsIndex" ><img src="/images/Logo.png" ng-click="main.removeBurger(e)" alt="swish-list-logo" /></a>
           <a id="active-logo" class="navbar-brand nav-bar-links" ng-show="main.user" ui-sref-active ui-sref="clothesItemsIndex" ><img src="/images/Logo.png" ng-click="main.removeBurger(e)" alt="swish-list-logo" /></a>
         </div>
 
