--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li ng-click="main.toggleBurger()">
               <a class="nav-bar-links"  href="#" ui-sref="usersArchiveShow" ui-sref-active >Archive</a>
             </li>
-            <li>
+            <li ng-click="main.toggleBurger()">
               <a class="nav-bar-links" href="#" ng-click="main.logout()">Logout</a>
             </li>
           </ul>
